--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,87 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Test hosting</title>
-    </head>
-    <body>
-        <h1>Community bot worked</h1>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Комьюнити бот</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif; /* Используем Roboto */
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #ffffff; /* Белый цвет для фона */
+        }
+        .container {
+            width: 80%;
+            max-width: 1000px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            background-color: #ffffff; /* Белый цвет для фона контейнера */
+            border-radius: 15px; /* Скругленные углы контейнера */
+            overflow: hidden;
+            padding: 20px;
+        }
+        .description h2 {
+            margin-top: 0;
+            color: #0088cc; /* Более насыщенный синий */
+            text-align: center;
+            font-weight: 700; /* Жирный */
+            font-size: 2rem; /* Увеличиваем размер текста в 1.5 раза от значения 2rem */
+            text-transform: uppercase; /* Заглавные буквы */
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); /* Теневая глубина */
+        }
+        .advantage {
+            display: flex;
+            align-items: center;
+        }
+        .advantage img {
+            width: 200px;
+            height: 200px;
+            margin-right: 15px;
+            border-radius: 10px;
+        }
+        .description p {
+            color: #333; /* Стандартный тёмный цвет для текста */
+            margin: 0;
+            font-weight: 400; /* Обычный вес */
+            font-size: 1.5rem; /* Увеличиваем размер текста в 1.5 раза от 0.75rem */
+        }
+        .divider {
+            border-bottom: 1px solid #0088cc; /* Синий цвет разделительной линии */
+            margin: 15px 0;
+        }
+        .logo img {
+            width: 100px;
+            height: 100px;
+        }
+    </style>
+</head>
+<body>
+<div class="container">
+    <div class="description">
+        <h2>Создавай свои комьюнити</h2>
+        <div class="advantage">
+            <img src="telegram_logo.svg" alt="Telegram">
+            <p>Не нужно дополнительных инструментов. Записывайся на мероприятия прямо в телеграме.</p>
+        </div>
+        <div class="divider"></div>
+        <div class="advantage">
+            <img src="busy.jpg" alt="Не отвлекать">
+            <p>Не отвлекайся от дел в ту же секунду, когда открывается запись на тренировку. Места будут распределены справедливо.</p>
+        </div>
+        <div class="divider"></div>
+        <div class="advantage">
+            <img src="friendship.png" alt="Дружба">
+            <p>Познакомься наконец и дружи с теми, с кем ты ходишь вместе.</p>
+        </div>
+        <div class="divider"></div>
+    </div>
+</div>
+
+</body>
 </html>
